--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react-dom": "^16.13.1",
     "react-i18next": "^11.3.5",
     "react-icons": "^3.10.0",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-search-input": "^0.11.3",
     "react-select": "^3.1.0",
     "react-toastify": "^5.5.0",
     "reactotron": "^0.9.0",
