--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
+    "chroma-js": "^2.1.0",
+    "date-fns": "^2.12.0",
+    "date-fns-tz": "^1.0.10",
     "history": "^4.10.1",
     "i18next": "^19.4.3",
     "immer": "^6.0.3",
