--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "history": "^4.10.1",
     "i18next": "^19.4.3",
     "immer": "^6.0.3",
+    "jsonwebtoken": "^8.5.1",
     "polished": "^3.5.2",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
@@ -28,6 +29,7 @@
     "react-search-input": "^0.11.3",
     "react-select": "^3.1.0",
     "react-toastify": "^5.5.0",
+    "react-truncate": "^2.4.0",
     "reactotron": "^0.9.0",
     "reactotron-react-js": "^3.3.7",
     "reactotron-redux": "^3.1.3",
