--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+
+    "bluebird": "^3.7.2",
+    "msal": "^1.3.1",
+    "powerbi-client": "^2.11.0",
+    "react-app-polyfill": "^1.0.6",
+  
     "axios": "^0.19.2",
     "chroma-js": "^2.1.0",
     "date-fns": "^2.12.0",
