--- a/package.json
+++ b/package.json
@@ -8,13 +8,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-
-    "bluebird": "^3.7.2",
-    "msal": "^1.3.1",
-    "powerbi-client": "^2.11.0",
-    "react-app-polyfill": "^1.0.6",
-  
     "axios": "^0.19.2",
+    "bluebird": "^3.7.2",
     "chroma-js": "^2.1.0",
     "date-fns": "^2.12.0",
     "date-fns-tz": "^1.0.10",
@@ -22,9 +17,13 @@
     "i18next": "^19.4.3",
     "immer": "^6.0.3",
     "jsonwebtoken": "^8.5.1",
+    "msal": "^1.3.1",
     "polished": "^3.5.2",
+    "powerbi-client": "^2.11.0",
     "prop-types": "^15.7.2",
+    "querystring": "^0.2.0",
     "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.3.5",
     "react-icons": "^3.10.0",
